--- a/CSS-friends/css-friends-03/03-layout.html
+++ b/CSS-friends/css-friends-03/03-layout.html
@@ -34,5 +34,15 @@
     </nav>
   </header>
 
+  <main class="content group">
+    <section class="content-sidebar">
+
+    </section>
+
+    <section class="content-main">
+      
+    </section>
+  </main>
+
 </body>
 </html>
